--- a/ClassWork08.12.2023MVCPatter/Views/Shared/_Layout.cshtml
+++ b/ClassWork08.12.2023MVCPatter/Views/Shared/_Layout.cshtml
@@ -18,7 +18,13 @@
                         <h3>AleeButka</h3>
                     </div>
                 </a>
-            </div>
+         </div>
+         <div id="HeadMenu">
+             <ul>
+                <li><a class="navbar-brand" asp-area="" asp-controller="Movies" asp-action="Index">Главная</a></li>
+                <li><a class="navbar-brand" asp-area="" asp-controller="Movies" asp-action="Create">Добавить</a></li>
+             </ul>
+         </div>
     </header>
 
         <main role="main" class="pb-3" >
