--- a/ClassWork08.12.2023MVCPatter/Views/Movies/Create.cshtml
+++ b/ClassWork08.12.2023MVCPatter/Views/Movies/Create.cshtml
@@ -45,15 +45,14 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div id="PosterInput">
-                <label asp-for="Poster" class="control-label">Постер</label>
-                <input asp-for="Poster" class="form-control" />
-                <span asp-validation-for="Poster" class="text-danger"></span>
-            </div>
             </div>
             <div>
                 <img id="PosterCreateMovie" />
-                <input type="file" name="uploadedFile" id="AddPosterbtn" accept=".jpg, .jpeg, .png, .webp, .bmp, .svg"/>
+            <div id="PosterInputAndFile">
+                <input type="file" name="uploadedFile" id="AddPosterbtn" class="form-control" accept=".jpg, .jpeg, .png, .webp, .bmp, .svg" />
+                <input value="" id="inputPoster" asp-for="Poster" />
+            </div>
+            <span asp-validation-for="Poster" class="text-danger" style="margin-left: 50px;"></span>
                 <script>
                 AddPosterbtn.addEventListener("change", (event) => {
                     var target = event.target;
@@ -73,6 +72,9 @@
                     var fileReader = new FileReader();
 
                     fileReader.onload = () => {
+                        const nameList = AddPosterbtn.value.split(/\\/)
+                        inputPoster.value = nameList[nameList.length - 1];
+                        inputPoster.focus();
                         PosterCreateMovie.src = fileReader.result;
                     }
 
