--- a/ClassWork08.12.2023MVCPatter/Views/Movies/Edit.cshtml
+++ b/ClassWork08.12.2023MVCPatter/Views/Movies/Edit.cshtml
@@ -45,19 +45,19 @@
                 <input asp-for="Description" class="form-control" value="@Model.Description" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div id="PosterInput">
-                <label asp-for="Poster" class="control-label">Постер</label>
-                <input asp-for="Poster" class="form-control" />
-                <span asp-validation-for="Poster" class="text-danger"></span>
-            </div>
             </div>
             <div>
             <img id="PosterCreateMovie" src="@Model.Poster" />
-                <input type="file" name="uploadedFile" id="AddPosterbtn" accept=".jpg, .jpeg, .png, .webp, .bmp, .svg"/>
-                <script>
+            <div id="PosterInputAndFile">
+            <input type="file" name="uploadedFile" id="AddPosterbtn" class="form-control" accept=".jpg, .jpeg, .png, .webp, .bmp, .svg" value="@Model.Poster" />
+            <input value="" id="inputPoster" asp-for="Poster" />
+            </div>
+            <span asp-validation-for="Poster" class="text-danger" style="margin-left: 50px;"></span>
+            <input type="submit" value="Изменить" id="AddMovieBtn" asp-route-id="@Model.Id" />
+            <script>
                 AddPosterbtn.addEventListener("change", (event) => {
                     var target = event.target;
-
+                    
                     if (!FileReader) {
                         PosterCreateMovie.src = "";
                         PosterCreateMovie.alt = "Вы ничего не выбрали"
@@ -73,13 +73,20 @@
                     var fileReader = new FileReader();
 
                     fileReader.onload = () => {
+                        const nameList = AddPosterbtn.value.split(/\\/)
+                        inputPoster.value = nameList[nameList.length - 1];
+                        inputPoster.focus();
                         PosterCreateMovie.src = fileReader.result;
+                        
                     }
 
                     fileReader.readAsDataURL(target.files[0]);
                 });
+
+                inputPoster.addEventListener("dblclick", () => {
+                    inputPoster.value = "";
+                });
                 </script>
-            <input type="submit" value="Изменить" id="AddMovieBtn" asp-route-id="@Model.Id" />
             </div>
         </form>
 </div>
